# my-webpage

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  download_and_run_latest_release.sh  example.env  justfile  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: debug.yml  pages.yml  release.yml
.metrics/: sizes.csv
.sqlx/: query-0dd39487e5be40240af33790b9cc2a6503e98e69dc998fee1c70f9a9b620e491.json  query-284e9fc726891314eab8b68ceb7a23e83f978fed8d50303b686f460c248360ad.json  query-7f9b18fa7d8c775ed9b2577bfc2c1c22ae8bb7b57fb262343d7a7697aeb2560f.json  query-e93e2b33cf5f859d359ea1c01f488b37cf7dfe24f6f68b8e80f3645f1414aee1.json  query-f77c47364a218ef4e9ada00154256205a644cf0f464e6df5e45fe267896fa05d.json
.zed/: tasks.json
docs/: ARCHITECTURE.md  index.html  metrics.html  sizes.csv
migrations/: 20250930164756_initial_schema.sql
public/: test.md
scripts/: download_and_run_latest_release.sh  install_node_deps.sh
src/: app.rs  lib.rs  main.rs
src/components/common/: bars.rs  content.rs  error_responses.rs  footer.rs  header.rs  mod.rs  theme_switcher.rs  title.rs
src/components/pages/: about.rs  blog.rs  contact.rs  homepage.rs  mod.rs  projects.rs
src/models/: mod.rs  post.rs  repository.rs  tag.rs
src/server/: markdown.rs  mod.rs  post.rs
src/server/database/: db_context.rs  mod.rs
src/utils/: content_parser.rs
static/: test.md
style/: tailwind.css
